--- a/assignment-1/src/index.css
+++ b/assignment-1/src/index.css
@@ -11,12 +11,15 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  height: 100%;
+  width: 100%;
 }
 
 #root {
-  height: 100vh;
-  width: 100wh;
+  height: 100%;
+  width: 100%;
 }
+
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
@@ -26,6 +29,9 @@ code {
   z-index: 99999 !important;
   color: #000;
   background-color: rgba(0, 0, 0, 0.638);
+  height: 100% !important;
+  width: 100% !important;
+  overflow: hidden !important;
 }
 
 .filter-modal-footer {
